--- a/src/app/home/menu/menu.component.scss
+++ b/src/app/home/menu/menu.component.scss
@@ -18,8 +18,8 @@
       justify-content: space-between;
 
       span {
-        padding-bottom: $spacing-lg;
-        padding-top: $spacing-lg;
+        padding-bottom: $spacing-md;
+        padding-top: $spacing-md;
         text-transform: uppercase;
         font-weight: 600;
       }
