--- a/src/app/home/invoices/invoices.component.html
+++ b/src/app/home/invoices/invoices.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <div footer class="h-100">
+  <div footer class="h-100 p-5 text-center">
     <button class="btn btn-success btn-lg ml-2" type="button" (click)="print()">
       <i class="bx bxs-file-pdf mr-2"></i>
       <span>Stampa</span>
