--- a/src/app/home/extra-presences-summary/extra-presences-summary.component.html
+++ b/src/app/home/extra-presences-summary/extra-presences-summary.component.html
@@ -30,20 +30,21 @@
 
         <dxi-column caption="Giorno" dataField="date" dataType="datetime" cellTemplate="dayCellTemplate">
           <div *dxTemplate="let data of 'dayCellTemplate'">
-            {{ data?.data?.date | date:'EEEE dd' }}
+            <span *ngIf="data?.data?.date">{{ data?.data?.date | date:'EEEE dd' }} </span>
+            <span *ngIf="!data?.data?.date">Altro</span>
           </div>
         </dxi-column>
         <dxi-column caption="Mattina">
           <dxi-column caption="Entrata" dataField="morningEntry" dataType="datetime" width="75"
             cellTemplate="morningEntryCellTemplate">
             <div *dxTemplate="let data of 'morningEntryCellTemplate'">
-              {{ data?.data?.morningEntry | date:'shortTime' }}
+              <span *ngIf="data?.data?.morningEntry">{{ data?.data?.morningEntry | date:'shortTime' }}</span>
             </div>
           </dxi-column>
           <dxi-column caption="Uscita" dataField="morningExit" dataType="datetime" width="75"
             cellTemplate="morningExitCellTemplate">
             <div *dxTemplate="let data of 'morningExitCellTemplate'">
-              {{ data?.data?.morningExit | date:'shortTime' }}
+              <span *ngIf="data?.data?.morningExit">{{ data?.data?.morningExit | date:'shortTime' }}</span>
             </div>
           </dxi-column>
         </dxi-column>
@@ -51,13 +52,13 @@
           <dxi-column caption="Entrata" dataField="eveningEntry" dataType="datetime" width="75"
             cellTemplate="eveningEntryCellTemplate">
             <div *dxTemplate="let data of 'eveningEntryCellTemplate'">
-              {{ data?.data?.eveningEntry | date:'shortTime' }}
+              <span *ngIf="data?.data?.eveningEntry">{{ data?.data?.eveningEntry | date:'shortTime' }}</span>
             </div>
           </dxi-column>
           <dxi-column caption="Uscita" dataField="eveningExit" dataType="datetime" width="75"
             cellTemplate="eveningExitCellTemplate">
             <div *dxTemplate="let data of 'eveningExitCellTemplate'">
-              {{ data?.data?.eveningExit | date:'shortTime' }}
+              <span *ngIf="data?.data?.eveningExit">{{ data?.data?.eveningExit | date:'shortTime' }}</span>
             </div>
           </dxi-column>
           <dxi-column *ngFor="let specialContract of specialContracts" name="dailyHours"
