--- a/src/app/home/invoices/invoices.component.html
+++ b/src/app/home/invoices/invoices.component.html
@@ -1,55 +1,121 @@
 <app-hbf-template class="h-100" [overflowScroll]="true">
-
   <div header class="p-5 pb-0 h-100 text-center">
     <h2 class="mb-0 text-primary">Resoconto fatture mensile</h2>
     <div class="header-container">
-      <dx-date-box type="date" (onValueChanged)="onDateChanged($event)" [disabled]="isLoading"
-        displayFormat="monthAndYear" [calendarOptions]="calendarOptions" [value]="selectedDate">
+      <dx-date-box
+        type="date"
+        (onValueChanged)="onDateChanged($event)"
+        [disabled]="isLoading"
+        displayFormat="monthAndYear"
+        [calendarOptions]="calendarOptions"
+        [value]="selectedDate"
+      >
       </dx-date-box>
 
       <div class="buttons-container">
-        <button class="btn btn-success btn-lg ml-2" type="button" [disabled]="isLoading" (click)="addRow()">
+        <button
+          class="btn btn-success btn-lg ml-2"
+          type="button"
+          [disabled]="isLoading"
+          (click)="addRow()"
+        >
           <i class="bx bx-plus mr-2"></i>
           <span>Aggiungi riga</span>
         </button>
-        <button class="btn btn-success btn-lg ml-2" type="button" [disabled]="isLoading" (click)="save()">
+        <button
+          class="btn btn-success btn-lg ml-2"
+          type="button"
+          [disabled]="isLoading"
+          (click)="save()"
+        >
           <i class="bx bx-save mr-2"></i>
           <span>Salva</span>
         </button>
       </div>
     </div>
+
+    <div class="pt-2">
+      <h6>Selezionare le righe che si vogliono nascondere nella stampa.</h6>
+    </div>
   </div>
 
-  <div body *ngIf="!isLoading; else loader;" class="p-5 h-100">
+  <div body *ngIf="!isLoading; else loader" class="p-5 h-100">
     <div class="container h-100">
-      <dx-data-grid class="h-100" [dataSource]="invoices" [showBorders]="true" [rowAlternationEnabled]="true">
+      <dx-data-grid
+        class="h-100"
+        [dataSource]="invoices"
+        [showBorders]="true"
+        [rowAlternationEnabled]="true"
+      >
         <dxo-editing [allowUpdating]="true" mode="cell"></dxo-editing>
         <dxo-export [enabled]="true" [fileName]="fileName"></dxo-export>
+        <dxo-selection
+          [selectAllMode]="'allPages'"
+          [showCheckBoxesMode]="'onClick'"
+          mode="multiple"
+        ></dxo-selection>
 
         <dxi-column caption="Genitore">
-          <dxi-column caption="Nome" dataField="billingParent.firstName" dataType="string" [allowEditing]="false"></dxi-column>
-          <dxi-column caption="Cognome" dataField="billingParent.lastName" dataType="string" [allowEditing]="false"></dxi-column>
+          <dxi-column
+            caption="Nome"
+            dataField="billingParent.firstName"
+            dataType="string"
+            [allowEditing]="false"
+          ></dxi-column>
+          <dxi-column
+            caption="Cognome"
+            dataField="billingParent.lastName"
+            dataType="string"
+            [allowEditing]="false"
+          ></dxi-column>
         </dxi-column>
         <dxi-column caption="Metodo pagamento" dataField="paymentMethod">
-          <dxo-lookup [dataSource]="paymentMethods" valueExpr="id" displayExpr="description">
+          <dxo-lookup
+            [dataSource]="paymentMethods"
+            valueExpr="id"
+            displayExpr="description"
+          >
           </dxo-lookup>
         </dxi-column>
-        <dxi-column caption="Data pagamento" dataField="paymentDate" dataType="datetime"
-          cellTemplate="paymentDateCellTemplate" editCellTemplate="paymentDateEditCellTemplate">
+        <dxi-column
+          caption="Data pagamento"
+          dataField="paymentDate"
+          dataType="datetime"
+          cellTemplate="paymentDateCellTemplate"
+          editCellTemplate="paymentDateEditCellTemplate"
+        >
           <div *dxTemplate="let data of 'paymentDateCellTemplate'">
-            {{ data?.data?.paymentDate | date:'shortDate' }}
+            {{ data?.data?.paymentDate | date: "shortDate" }}
           </div>
           <div *dxTemplate="let data of 'paymentDateEditCellTemplate'">
-            <dx-date-box (onValueChanged)="onPaymentDateChanged($event, data?.data?.id)" [useMaskBehavior]="true"
-              displayFormat="shortDate" type="date" [value]="data?.data?.id"></dx-date-box>
+            <dx-date-box
+              (onValueChanged)="onPaymentDateChanged($event, data?.data?.id)"
+              [useMaskBehavior]="true"
+              displayFormat="shortDate"
+              type="date"
+              [value]="data?.data?.id"
+            ></dx-date-box>
           </div>
         </dxi-column>
-        <dxi-column caption="Numero fattura" dataField="number" dataType="string">
+        <dxi-column
+          caption="Numero fattura"
+          dataField="number"
+          dataType="string"
+        >
         </dxi-column>
-        <dxi-column caption="Iscrizione" dataField="subscriptionAmount" dataType="number" [allowEditing]="false">
+        <dxi-column
+          caption="Iscrizione"
+          dataField="subscriptionAmount"
+          dataType="number"
+          [allowEditing]="false"
+        >
         </dxi-column>
-        <dxi-column caption="Data pagamento iscrizione" dataField="subscriptionPaidDate" dataType="date"
-          [allowEditing]="false">
+        <dxi-column
+          caption="Data pagamento iscrizione"
+          dataField="subscriptionPaidDate"
+          dataType="date"
+          [allowEditing]="false"
+        >
         </dxi-column>
         <dxi-column caption="Totale" dataField="amount" dataType="number">
         </dxi-column>
@@ -63,7 +129,6 @@
       <span>Stampa</span>
     </button>
   </div>
-
 </app-hbf-template>
 
 <ng-template #loader>
